Implement offer by id endpoint
